--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,28 @@
 ::ng-deep .mat-tab-labels{
   justify-content: center; /* align items in Main Axis */
 }
+
+.some-class {
+  height: 300px;
+  width: 100%;
+}
+
+.some-parallax {
+  background-image: url('./../assets/cat-banner.jpg');
+  background-size: 100%;
+  height: 350px;
+  width: 100%;
+}
+
+.center{
+  position: absolute;
+  left: 40%;
+  top: 20%;
+  border-radius: 5px;
+  background-color: rgba(132, 70, 11, 0.9);
+  padding: 30px;
+  font-size: 250%;
+  font-weight: bolder;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
