--- a/src/app/votes/votes.component.css
+++ b/src/app/votes/votes.component.css
@@ -7,6 +7,8 @@
 .column {
   flex: 33.33%;
   padding: 25px;
+  padding-right: 40px;
+  padding-left: 40px;
 }
 
 .column img {
@@ -19,4 +21,17 @@
 .column img:hover {
   opacity: 0.8;
   cursor: pointer;
+}
+
+.cat-name{
+  text-align: center;
+  color: white;
+  margin: auto;
+  margin-bottom: 15px;
+  width: 30%;
+  border-radius: 5px;
+  background-color: rgb(96, 155, 242);
+  padding: 10px;
+  font-size: 150%;
+  font-weight: bolder;
 }
