--- a/src/app/votes/votes.component.html
+++ b/src/app/votes/votes.component.html
@@ -1,3 +1,4 @@
+<div style="text-align: center; font-size: 200%; margin-top:15px;">Vote for cuter cat :)</div>
 <div class="row">
   <ngx-loading [show]="loading" [config]="{ fullScreenBackdrop: false}"></ngx-loading>
   <div class="column">
